--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -x ts-node-esm src/server/main.ts",
+    "dev": "nodemon -x ts-node --esm src/server/main.ts",
     "start": "NODE_ENV=production npx tsx src/server/main.ts",
     "build": "vite build"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "framer-motion": "^11.3.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsx": "^4.19.0",
-    "typescript": "^5.3.2",
     "vite-express": "*"
   },
   "devDependencies": {
@@ -23,7 +25,12 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.20",
     "nodemon": "^3.0.1",
+    "tailwindcss": "^3.4.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
     "vite": "^5.0.2"
   }
 }
