--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/system": "^6.0.1",
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -27,6 +31,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.20",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
